# rnap

./: AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.agents/skills/coding-with-docs/: SKILL.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/rnap-cell/: Cargo.toml
crates/rnap-cell/src/: lib.rs
crates/rnap-channel/: Cargo.toml
crates/rnap-channel/src/: channel.rs  lib.rs  receptor.rs
crates/rnap-chaperone/: Cargo.toml
crates/rnap-chaperone/src/: lib.rs
crates/rnap-chiasma/: Cargo.toml
crates/rnap-chiasma/src/: lib.rs
crates/rnap-chromatine/: Cargo.toml
crates/rnap-chromatine/src/: lib.rs
crates/rnap-chromosome/: Cargo.toml
crates/rnap-chromosome/src/: lib.rs
crates/rnap-cli/: Cargo.toml
crates/rnap-cli/src/: lib.rs  main.rs
crates/rnap-dna/: Cargo.toml
crates/rnap-dna/src/: lib.rs
crates/rnap-fold/: Cargo.toml
crates/rnap-fold/src/: fold.rs  lib.rs
crates/rnap-gene/: Cargo.toml
crates/rnap-gene/src/: lib.rs
crates/rnap-genome/: Cargo.toml
crates/rnap-genome/src/: lib.rs
crates/rnap-genotype/: Cargo.toml
crates/rnap-genotype/src/: lib.rs
crates/rnap-histone/: Cargo.toml
crates/rnap-histone/src/: histone.rs  lib.rs
crates/rnap-locus/: Cargo.toml
crates/rnap-locus/src/: lib.rs
crates/rnap-mrna/: Cargo.toml
crates/rnap-mrna/src/: lib.rs
crates/rnap-organelle/: Cargo.toml
crates/rnap-organelle/src/: lib.rs
crates/rnap-organism/: Cargo.toml
crates/rnap-organism/src/: lib.rs  organism.rs
crates/rnap-phenome/: Cargo.toml
crates/rnap-phenome/src/: lib.rs
crates/rnap-phenotype/: Cargo.toml
crates/rnap-phenotype/src/: lib.rs  phenotype.rs  protein.rs
crates/rnap-quiasma/: Cargo.toml
crates/rnap-quiasma/src/: lib.rs  quiasma.rs
crates/rnap-renderer/: Cargo.toml
crates/rnap-renderer/src/: lib.rs
crates/rnap-ribosome/: Cargo.toml
crates/rnap-ribosome/src/: lib.rs  ribosome.rs  rrna.rs
crates/rnap-srna/: Cargo.toml
crates/rnap-srna/src/: lib.rs
crates/rnap-storage/: Cargo.toml
crates/rnap-storage/src/: lib.rs  phenotype_storage.rs
crates/rnap-trna/: Cargo.toml
crates/rnap-trna/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: 000_VERTICAL_BUILD_INDEX.md  001_BOOTSTRAP_TENANT_PROJECT_USER.md  002_DEFINE_WORK_TYPE.md  003_OPEN_CANDIDATE_WORK.md  004_MUTATE_CANDIDATE_WORK.md  005_CLI_SESSION_AND_EPIGENETICS.md  005_COMMIT_IMMUTABLE_VERSION.md  006_AUTHORIZE_WITH_HISTONES.md  007_ADD_WORKFLOW_ARTIFACTS.md  008_ADD_IMPLEMENTATION_EVALUATION.md  ABSTRACTION_CHARTER.md  AGENT_HANDOFF.md  ARCHITECTURE.md  AUTONOMOUS_DECISION_LOG.md  DEFERRED_DOMAIN_LEDGER.md  DISCUSSION_MODEL_PROPOSAL.md  DOCS_RESET_RECOVERY_NOTES.md  DOMAIN_MODEL.md  ENCODING_TAXONOMY.md  LLD.md  ONTOLOGY.md  SEQUENCE_PROBLEM.md  WORKFLOW_MODEL.md
docs/decisions/: 001_agent_workflow.md  002_ribozyme_graph_deferral.md  003_executable_artifact_naming.md  004_verification_scope.md  005_exon_to_trna.md  006_select_not_approved.md  007_executable_defines_workflows.md  008_requirements_rna_capabilities.md  009_mutate_target_first_cli.md  010_locus_name_storage.md  011_genome_wide_locus_names.md  012_locus_already_exists.md
docs/learning/: 001_names_are_not_semantics.md
migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql  0002_gene_counters.down.sql  0002_gene_counters.up.sql  0003_chromatine.down.sql  0003_chromatine.up.sql  0004_dna.down.sql  0004_dna.up.sql  0005_dna_chromatine.down.sql  0005_dna_chromatine.up.sql  0006_gene_dna.down.sql  0006_gene_dna.up.sql  0007_chromosomes.down.sql  0007_chromosomes.up.sql  0007_gene_chromosome.down.sql  0007_gene_chromosome.up.sql  0008_gene_chromosome.down.sql  0008_gene_chromosome.up.sql  0008_histones.down.sql  0008_histones.up.sql  0009_chromosomes.down.sql  0009_chromosomes.up.sql  0009_histones.down.sql  0009_histones.up.sql  0010_organisms.down.sql  0010_organisms.up.sql  0011_quiasmas.down.sql  0011_quiasmas.up.sql  0012_loci.down.sql  0012_loci.up.sql  0013_mrna.down.sql  0013_mrna.up.sql  0014_trna.down.sql  0014_trna.up.sql  0015_srna.down.sql  0015_srna.up.sql  0016_phenomes.down.sql  0016_phenomes.up.sql  0017_ribosomes.down.sql  0017_ribosomes.up.sql  (+21 more)
seeds/: 0002_genotypes.sql  001_genomes.sql  002_genotypes.sql
sql/: V001_initial_schema.sql
src/: app.rs  cli.rs  lib.rs  main.rs  session.rs
src/app/: commands.rs  encoding.rs  error.rs  genes.rs  identity.rs  ids.rs  mod.rs  tests.rs  workflow.rs
src/app/use_cases/: exploration.rs  introns.rs  mutate.rs  platform.rs  queries.rs  semantic_narrowing.rs  splice.rs  transcribe.rs
src/cli/: tests.rs
