[workspace]
members = [
    "crates/rnap-genome",
    "crates/rnap-genotype",
    "crates/rnap-gene",
    "crates/rnap-chromosome",
    "crates/rnap-phenotype",
    "crates/rnap-chromatine",
    "crates/rnap-dna",
    "crates/rnap-histone",
    "crates/rnap-organism",
    "crates/rnap-quiasma",
    "crates/rnap-storage",
    "crates/rnap-cli", "crates/rnap-locus", "crates/rnap-mrna",
]
resolver = "2"
