[workspace]
members = [
    "crates/rnap-genome",
    "crates/rnap-genotype",
    "crates/rnap-gene",
    "crates/rnap-chromosome",
    "crates/rnap-phenotype",
    "crates/rnap-chromatine",
    "crates/rnap-dna",
    "crates/rnap-histone",
    "crates/rnap-organism",
    "crates/rnap-channel",
    "crates/rnap-chiasma",
    "crates/rnap-storage",
    "crates/rnap-cli",
    "crates/rnap-locus",
    "crates/rnap-mrna",
    "crates/rnap-trna",
    "crates/rnap-srna",
    "crates/rnap-ribosome",
    "crates/rnap-phenome",
    "crates/rnap-renderer",
    "crates/rnap-fold",
    "crates/rnap-chaperone",
    "crates/rnap-cell",
    "crates/rnap-organelle",
]
resolver = "2"
