[package]
name = "rnap-genotype"
version = "0.1.0"
edition = "2024"

[dependencies]
rnap-genome = { path = "../rnap-genome" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }