[package]
name = "rnap-organelle"
version = "0.1.0"
edition = "2021"

[dependencies]
rnap-genome = { path = "../rnap-genome" }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]