[package]
name = "rnap-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
rnap-genome = { path = "../rnap-genome" }
rnap-genotype = { path = "../rnap-genotype" }
rnap-gene = { path = "../rnap-gene" }
rnap-chromosome = { path = "../rnap-chromosome" }
rnap-phenotype = { path = "../rnap-phenotype" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenvy = "0.15"